# password-generator

./: Cargo.toml  README.md
.github/workflows/: release.yaml  rust.yml
src/: lib.rs  main.rs
src/gui/: mod.rs  password_extra.rs
src/gui/styles/: style.css
